--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 exceptionnelles de cette saison !</p>
             <ul>
                 <li>
-                    <img src="images/evgeniy-smersh-nI0bCs5ExGg-unsplash.jpg">
+                    <img src="images/evgeniy-smersh-nI0bCs5ExGg-unsplash.jpg" alt="Guitariste du groupe en tenue anti bactériologique">
                     <div>
                         <span class="title">Samedi 10 mai – <strong>Turbo Diesel Tour</strong> – CHF 25.–</span>
                         <p>Un concert explosif avec Turbo Diesel, le groupe le plus énergique de la scène métal
