--- a/index.html
+++ b/index.html
@@ -10,16 +10,13 @@
     <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Creepster&family=Lacquer&family=Freckle+Face&family=Syne+Mono&family=Special+Elite&display=swap" rel="stylesheet">
     <link rel="canonical" href="https://autresite.com/page-similaire" />
-    
-    <link rel="icon" href="favicon.ico" sizes="any">
+     <link rel="icon" href="favicon.ico" sizes="any">
 
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+
 </head>
 
 <body>
@@ -97,7 +94,7 @@
                 exceptionnelles de cette saison !</p>
             <ul>
                 <li>
-                    <img src="images/evgeniy-smersh-nI0bCs5ExGg-unsplash.jpg">
+                    <img src="images/evgeniy-smersh-nI0bCs5ExGg-unsplash.jpg" loading="lazy">
                     <div>
                         <span class="title">Samedi 10 mai – <strong>Turbo Diesel Tour</strong> – CHF 25.–</span>
                         <p>Un concert explosif avec Turbo Diesel, le groupe le plus énergique de la scène métal
@@ -107,7 +104,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="images/joel-muniz-CDXlUyfpNY4-unsplash.jpg">
+                    <img src="images/joel-muniz-CDXlUyfpNY4-unsplash.jpg" loading="lazy">
                     <div>
                         <span class="title">Vendredi 16 mai – <strong>DJ Super 98'</strong> (Soirée rétro) – CHF
                             20.–</span>
@@ -118,7 +115,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="images/evgeniy-smersh-jVtSmbDZYk4-unsplash.jpg">
+                    <img src="images/evgeniy-smersh-jVtSmbDZYk4-unsplash.jpg" loading="lazy">
                     <div>
                         <span class="title">Samedi 24 mai – <strong>Punk & Pétrole Festival</strong> – CHF 30.–</span>
                         <p>Le festival qui déchaîne les foules ! Une journée pleine d'énergie avec les meilleurs groupes
@@ -130,7 +127,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="images/fernando-batista-6r-O7BZjsOY-unsplash.jpg">
+                    <img src="images/fernando-batista-6r-O7BZjsOY-unsplash.jpg" loading="lazy">
                     <div>
                         <span class="title">Jeudi 6 juin – <strong>Trip-Hop & Footwork Night</strong> – CHF 35.–</span>
                         <p>Une soirée envoûtante avec une musicienne de Chicago, pionnière du mélange entre trip-hop
@@ -142,7 +139,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="images/evgeniy-smersh-dkJf3O_RzNM-unsplash.jpg">
+                    <img src="images/evgeniy-smersh-dkJf3O_RzNM-unsplash.jpg" loading="lazy">
                     <div>
                         <span class="title">Vendredi 30 mai – <strong>Blizzard Obscur : Soirée Black Metal</strong> –
                             CHF 25.–</span>
