lecteur_image_alt
fait pour toutes les images

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                     <div class="level"></div>
                 </div>
                 <div class="hero-buttons">
-                    <button style="font-size: 10px; padding: 2px 4px;">🎫 Réserve ta place</button>
-                    <button style="font-size: 10px; padding: 2px 4px;">🎧 Écoute un extrait</button>
+                    <button style="font-size: 1rem; padding: 0.5rem 1rem;">🎫 Réserve ta place</button>
+                    <button style="font-size: 1rem; padding: 0.5rem 1rem;">🎧 Écoute un extrait</button>
                 </div>
             </div>
         </div>
@@ -97,7 +97,7 @@
                 exceptionnelles de cette saison !</p>
             <ul>
                 <li>
-                    <img src="images/evgeniy-smersh-nI0bCs5ExGg-unsplash.jpg">
+                    <img src="images/evgeniy-smersh-nI0bCs5ExGg-unsplash.jpg" alt="Guitariste du groupe en tenue antibactériologique">
                     <div>
                         <span class="title">Samedi 10 mai – <strong>Turbo Diesel Tour</strong> – CHF 25.–</span>
                         <p>Un concert explosif avec Turbo Diesel, le groupe le plus énergique de la scène métal
@@ -107,7 +107,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="images/joel-muniz-CDXlUyfpNY4-unsplash.jpg">
+                    <img src="images/joel-muniz-CDXlUyfpNY4-unsplash.jpg" alt="image de groupe Joel Muniz">
                     <div>
                         <span class="title">Vendredi 16 mai – <strong>DJ Super 98'</strong> (Soirée rétro) – CHF
                             20.–</span>
@@ -118,7 +118,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="images/evgeniy-smersh-jVtSmbDZYk4-unsplash.jpg">
+                    <img src="images/evgeniy-smersh-jVtSmbDZYk4-unsplash.jpg" alt="foule mais concentration sur un garçon qui danse avec beaucoup de volonter">
                     <div>
                         <span class="title">Samedi 24 mai – <strong>Punk & Pétrole Festival</strong> – CHF 30.–</span>
                         <p>Le festival qui déchaîne les foules ! Une journée pleine d'énergie avec les meilleurs groupes
@@ -130,7 +130,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="images/fernando-batista-6r-O7BZjsOY-unsplash.jpg">
+                    <img src="images/fernando-batista-6r-O7BZjsOY-unsplash.jpg" alt="fille de profil qui écoute de la musique dans un casque">
                     <div>
                         <span class="title">Jeudi 6 juin – <strong>Trip-Hop & Footwork Night</strong> – CHF 35.–</span>
                         <p>Une soirée envoûtante avec une musicienne de Chicago, pionnière du mélange entre trip-hop
@@ -142,7 +142,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="images/evgeniy-smersh-dkJf3O_RzNM-unsplash.jpg">
+                    <img src="images/evgeniy-smersh-dkJf3O_RzNM-unsplash.jpg" alt="image en noir et blanc à l'intérieur d'un club de filles qui tirent la langue. Elles portent du maquillage imposant">
                     <div>
                         <span class="title">Vendredi 30 mai – <strong>Blizzard Obscur : Soirée Black Metal</strong> –
                             CHF 25.–</span>
@@ -162,9 +162,9 @@
             <p>Découvrez l'ambiance unique de notre salle à travers quelques photos. Chaque événement est une véritable
                 explosion de musique, de lumière et de bonne humeur.</p>
             <div class="photos">
-                <div class="photo"><img src="images/alex-wong-RIo45CycGCs-unsplash.jpg" /></div>
-                <div class="photo"><img src="images/evgeniy-smersh-uW8dnSPxYbA-unsplash.jpg" /></div>
-                <div class="photo"><img src="images/hanny-naibaho-D_LYjtHnDXE-unsplash.jpg" /></div>
+                <div class="photo"><img src="images/alex-wong-RIo45CycGCs-unsplash.jpg" alt="image d'une scène avec un chanteur qui chante au milieu de la scène. Il y a beaucoup de lumières de diverses couleurs"/></div>
+                <div class="photo"><img src="images/evgeniy-smersh-uW8dnSPxYbA-unsplash.jpg" alt="image en contre plongée d'un groupe de chanteur dont on ne voit pas le visage performer. L'arrière plan est orangée dûe au lumière de scène."/></div>
+                <div class="photo"><img src="images/hanny-naibaho-D_LYjtHnDXE-unsplash.jpg" alt="image d'une DJ qui et en train de mixer"/></div>
             </div>
             <audio src="media/TunePocket-Background-Loop.mp3" autoplay loop></audio>
         </div>
