--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 exceptionnelles de cette saison !</p>
             <ul>
                 <li>
-                    <img src="images/evgeniy-smersh-nI0bCs5ExGg-unsplash.jpg">
+                    <img src="images/evgeniy-smersh-nI0bCs5ExGg-unsplash.jpg" loading="lazy">
                     <div>
                         <span class="title">Samedi 10 mai – <strong>Turbo Diesel Tour</strong> – CHF 25.–</span>
                         <p>Un concert explosif avec Turbo Diesel, le groupe le plus énergique de la scène métal
@@ -98,7 +98,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="images/joel-muniz-CDXlUyfpNY4-unsplash.jpg">
+                    <img src="images/joel-muniz-CDXlUyfpNY4-unsplash.jpg" loading="lazy">
                     <div>
                         <span class="title">Vendredi 16 mai – <strong>DJ Super 98'</strong> (Soirée rétro) – CHF
                             20.–</span>
