Images changé +  Tag  "Lazy load" ajouté / typo changé / couleur des bouttons et des fonts changé, Padding des buttons augmenté

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta name="keywords" content="salle de concert, concerts, salle concert, salle de concert Lausanne, concerts Lausanne, concert salle Lausanne, musique, musique live, événements musicaux, salle de concert Suisse, concert Suisse, Sans Plomb, Le Sans Plomb, Sans Plomb concert, Sans Plomb salle concert, Lausanne concerts, Lausanne salle, concert, Lausanne musique, metal, rock, dj, punk, festival, festival Lausanne" />
 
     <link rel="stylesheet" href="style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Creepster&family=Lacquer&family=Freckle+Face&family=Syne+Mono&family=Special+Elite&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Concert+One&family=Karla&display=swap" rel="stylesheet">
     <link rel="canonical" href="https://autresite.com/page-similaire" />
-     <link rel="icon" href="favicon.ico" sizes="any">
+    <link rel="icon" href="favicon.ico" sizes="any">
 
 
 
@@ -82,9 +82,10 @@
                     <div class="level"></div>
                 </div>
                 <div class="hero-buttons">
-                    <button style="font-size: 10px; padding: 2px 4px;">🎫 Réserve ta place</button>
-                    <button style="font-size: 10px; padding: 2px 4px;">🎧 Écoute un extrait</button>
+                    <button>🎫 Réserve ta place</button>
+                    <button >🎧 Écoute un extrait</button>
                 </div>
+                
             </div>
         </div>
 
@@ -94,7 +95,7 @@
                 exceptionnelles de cette saison !</p>
             <ul>
                 <li>
-                    <img src="images/evgeniy-smersh-nI0bCs5ExGg-unsplash.jpg" loading="lazy">
+                    <img src="images/Compressed/evgeniy-smersh-nI0bCs5ExGg-unsplash.webp" loading="lazy">
                     <div>
                         <span class="title">Samedi 10 mai – <strong>Turbo Diesel Tour</strong> – CHF 25.–</span>
                         <p>Un concert explosif avec Turbo Diesel, le groupe le plus énergique de la scène métal
@@ -104,7 +105,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="images/joel-muniz-CDXlUyfpNY4-unsplash.jpg" loading="lazy">
+                    <img src="images/Compressed/joel-muniz-CDXlUyfpNY4-unsplash.webp" loading="lazy">
                     <div>
                         <span class="title">Vendredi 16 mai – <strong>DJ Super 98'</strong> (Soirée rétro) – CHF
                             20.–</span>
@@ -115,7 +116,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="images/evgeniy-smersh-jVtSmbDZYk4-unsplash.jpg" loading="lazy">
+                    <img src="images/Compressed/evgeniy-smersh-jVtSmbDZYk4-unsplash.webp" loading="lazy">
                     <div>
                         <span class="title">Samedi 24 mai – <strong>Punk & Pétrole Festival</strong> – CHF 30.–</span>
                         <p>Le festival qui déchaîne les foules ! Une journée pleine d'énergie avec les meilleurs groupes
@@ -127,7 +128,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="images/fernando-batista-6r-O7BZjsOY-unsplash.jpg" loading="lazy">
+                    <img src="images/Compressed/fernando-batista-6r-O7BZjsOY-unsplash.webp" loading="lazy">
                     <div>
                         <span class="title">Jeudi 6 juin – <strong>Trip-Hop & Footwork Night</strong> – CHF 35.–</span>
                         <p>Une soirée envoûtante avec une musicienne de Chicago, pionnière du mélange entre trip-hop
@@ -139,7 +140,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="images/evgeniy-smersh-dkJf3O_RzNM-unsplash.jpg" loading="lazy">
+                    <img src="images/Compressed/evgeniy-smersh-dkJf3O_RzNM-unsplash.webp" loading="lazy" >
                     <div>
                         <span class="title">Vendredi 30 mai – <strong>Blizzard Obscur : Soirée Black Metal</strong> –
                             CHF 25.–</span>
@@ -159,9 +160,9 @@
             <p>Découvrez l'ambiance unique de notre salle à travers quelques photos. Chaque événement est une véritable
                 explosion de musique, de lumière et de bonne humeur.</p>
             <div class="photos">
-                <div class="photo"><img src="images/alex-wong-RIo45CycGCs-unsplash.jpg" /></div>
-                <div class="photo"><img src="images/evgeniy-smersh-uW8dnSPxYbA-unsplash.jpg" /></div>
-                <div class="photo"><img src="images/hanny-naibaho-D_LYjtHnDXE-unsplash.jpg" /></div>
+                <div class="photo"><img src="images/Compressed/alex-wong-RIo45CycGCs-unsplash.webp" loading="lazy" /></div>
+                <div class="photo"><img src="images/Compressed/evgeniy-smersh-uW8dnSPxYbA-unsplash.webp" loading="lazy" /></div>
+                <div class="photo"><img src="images/Compressed/hanny-naibaho-D_LYjtHnDXE-unsplash.webp" loading="lazy" /></div>
             </div>
             <audio src="media/TunePocket-Background-Loop.mp3" autoplay loop></audio>
         </div>
