--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="images/joel-muniz-CDXlUyfpNY4-unsplash.jpg">
+                    <img src="images/joel-muniz-CDXlUyfpNY4-unsplash.jpg" alt="">
                     <div>
                         <span class="title">Vendredi 16 mai – <strong>DJ Super 98'</strong> (Soirée rétro) – CHF
                             20.–</span>
