--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <meta name="robots" content="noindex, follow" />
+    <meta name="robots" content="index, follow" />
     <meta name="keywords" content="salle de concert, concerts, salle concert, salle de concert Lausanne, concerts Lausanne, concert salle Lausanne, musique, musique live, événements musicaux, salle de concert Suisse, concert Suisse, Sans Plomb, Le Sans Plomb, Sans Plomb concert, Sans Plomb salle concert, Lausanne concerts, Lausanne salle, concert, Lausanne musique, metal, rock, dj, punk, festival, festival Lausanne" />
 
     <link rel="stylesheet" href="style.css" />
