--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="FR">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <meta name="robots" content="noindex, follow" />
-    <meta name="keywords" content="salle de concert, concerts, salle concert, salle de concert Lausanne, concerts Lausanne, concert salle Lausanne, musique, musique live, événements musicaux, salle de concert Suisse, concert Suisse, Sans Plomb, Le Sans Plomb, Sans Plomb concert, Sans Plomb salle concert, Lausanne concerts, Lausanne salle, concert, Lausanne musique, metal, rock, dj, punk, festival, festival Lausanne" />
+    <title>Le Sans Plomb</title>
+    <meta name="robots" content="index, follow" />
 
     <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Creepster&family=Lacquer&family=Freckle+Face&family=Syne+Mono&family=Special+Elite&display=swap" rel="stylesheet">
@@ -23,6 +22,7 @@
 </head>
 
 <body>
+    <a class="evitement" href="#contenu">Aller au contenu</a>
     <div class="container">
         <div class="header">
             <div class="logo">Le Sans Plomb 🚦</div>
@@ -92,7 +92,7 @@
         </div>
 
         <div class="program">
-            <h4 class="title">🚗 Prochain arrêt : Nos événements à venir</h4>
+            <h1 class="title">🚗 Prochain arrêt : Nos événements à venir</h1>
             <p>Voici la programmation des événements à venir au Sans Plomb. Ne manquez pas les concerts et soirées
                 exceptionnelles de cette saison !</p>
             <ul>
