--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -26,7 +26,7 @@
     <div class="container">
         <div class="header">
             <div class="logo">Le Sans Plomb 🚦</div>
-            <div class="nav">
+            <nav class="nav">
                 <ul>
                     <li><a href="#">Accueil</a></li>
                     <li>
@@ -72,7 +72,7 @@
                         </ul>
                     </li>
                 </ul>
-            </div>
+            </nav>
             <div class="hero">
                 <h2>Faites le plein de décibels</h2>
                 <p>Le Sans Plomb est une salle de concert unique, ancienne station-service transformée en lieu de
