--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <meta name="robots" content="noindex, follow" />
-    <meta name="keywords" content="salle de concert, concerts, salle concert, salle de concert Lausanne, concerts Lausanne, concert salle Lausanne, musique, musique live, événements musicaux, salle de concert Suisse, concert Suisse, Sans Plomb, Le Sans Plomb, Sans Plomb concert, Sans Plomb salle concert, Lausanne concerts, Lausanne salle, concert, Lausanne musique, metal, rock, dj, punk, festival, festival Lausanne" />
-
+    <meta name="robots" content="index, follow" />
+    <meta name="decription" content="Le Sans Plomb – salle de concert à Lausanne. Concerts rock, métal, DJ sets et soirées à thème dans un lieu atypique." >
     <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Concert+One&family=Karla&display=swap" rel="stylesheet">
-    <link rel="canonical" href="https://autresite.com/page-similaire" />
     <link rel="icon" href="favicon.ico" sizes="any">
 
 
@@ -21,9 +19,9 @@
 
 <body>
     <div class="container">
-        <div class="header">
+        <header class="header">
             <div class="logo">Le Sans Plomb 🚦</div>
-            <div class="nav">
+            <nav class="nav">
                 <ul>
                     <li><a href="#">Accueil</a></li>
                     <li>
@@ -69,8 +67,8 @@
                         </ul>
                     </li>
                 </ul>
-            </div>
-            <div class="hero">
+            </nav>
+            <section class="hero">
                 <h2>Faites le plein de décibels</h2>
                 <p>Le Sans Plomb est une salle de concert unique, ancienne station-service transformée en lieu de
                     musique et
@@ -86,16 +84,16 @@
                     <button >🎧 Écoute un extrait</button>
                 </div>
                 
-            </div>
-        </div>
+            </section>
+        </header>
 
-        <div class="program">
+        <section class="program">
             <h4 class="title">🚗 Prochain arrêt : Nos événements à venir</h4>
             <p>Voici la programmation des événements à venir au Sans Plomb. Ne manquez pas les concerts et soirées
                 exceptionnelles de cette saison !</p>
             <ul>
                 <li>
-                    <img src="images/Compressed/evgeniy-smersh-nI0bCs5ExGg-unsplash.webp" loading="lazy">
+                    <img src="images/Compressed/evgeniy-smersh-nI0bCs5ExGg-unsplash.webp" loading="lazy" alt="Groupe Turbo Diesel en concert live sur scène">
                     <div>
                         <span class="title">Samedi 10 mai – <strong>Turbo Diesel Tour</strong> – CHF 25.–</span>
                         <p>Un concert explosif avec Turbo Diesel, le groupe le plus énergique de la scène métal
@@ -105,7 +103,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="images/Compressed/joel-muniz-CDXlUyfpNY4-unsplash.webp" loading="lazy">
+                    <img src="images/Compressed/joel-muniz-CDXlUyfpNY4-unsplash.webp" loading="lazy" alt="DJ Super 98 mixant sur une scène rétro années 90">
                     <div>
                         <span class="title">Vendredi 16 mai – <strong>DJ Super 98'</strong> (Soirée rétro) – CHF
                             20.–</span>
@@ -116,7 +114,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="images/Compressed/evgeniy-smersh-jVtSmbDZYk4-unsplash.webp" loading="lazy">
+                    <img src="images/Compressed/evgeniy-smersh-jVtSmbDZYk4-unsplash.webp" loading="lazy" alt="Scène du Punk & Pétrole Festival avec public énergique">
                     <div>
                         <span class="title">Samedi 24 mai – <strong>Punk & Pétrole Festival</strong> – CHF 30.–</span>
                         <p>Le festival qui déchaîne les foules ! Une journée pleine d'énergie avec les meilleurs groupes
@@ -128,7 +126,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="images/Compressed/fernando-batista-6r-O7BZjsOY-unsplash.webp" loading="lazy">
+                    <img src="images/Compressed/fernando-batista-6r-O7BZjsOY-unsplash.webp" loading="lazy" alt="Artiste de Trip-Hop jouant en ambiance immersive">
                     <div>
                         <span class="title">Jeudi 6 juin – <strong>Trip-Hop & Footwork Night</strong> – CHF 35.–</span>
                         <p>Une soirée envoûtante avec une musicienne de Chicago, pionnière du mélange entre trip-hop
@@ -140,7 +138,7 @@
                     </div>
                 </li>
                 <li>
-                    <img src="images/Compressed/evgeniy-smersh-dkJf3O_RzNM-unsplash.webp" loading="lazy" >
+                    <img src="images/Compressed/evgeniy-smersh-dkJf3O_RzNM-unsplash.webp" loading="lazy" alt="Concert Black Metal lors de la soirée Blizzard Obscur">
                     <div>
                         <span class="title">Vendredi 30 mai – <strong>Blizzard Obscur : Soirée Black Metal</strong> –
                             CHF 25.–</span>
@@ -153,25 +151,25 @@
                 </li>
             </ul>
             <a href="#">Voir toute la programmation</a>
-        </div>
+        </section>
 
-        <div class="gallery">
+        <section class="gallery">
             <h2>📷 L’ambiance du Sans Plomb</h2>
             <p>Découvrez l'ambiance unique de notre salle à travers quelques photos. Chaque événement est une véritable
                 explosion de musique, de lumière et de bonne humeur.</p>
             <div class="photos">
-                <div class="photo"><img src="images/Compressed/alex-wong-RIo45CycGCs-unsplash.webp" loading="lazy" /></div>
-                <div class="photo"><img src="images/Compressed/evgeniy-smersh-uW8dnSPxYbA-unsplash.webp" loading="lazy" /></div>
-                <div class="photo"><img src="images/Compressed/hanny-naibaho-D_LYjtHnDXE-unsplash.webp" loading="lazy" /></div>
+                <div class="photo"><img src="images/Compressed/alex-wong-RIo45CycGCs-unsplash.webp" loading="lazy" alt="Public sous les lumières colorées d'un concert live"/></div>
+                <div class="photo"><img src="images/Compressed/evgeniy-smersh-uW8dnSPxYbA-unsplash.webp" loading="lazy" alt="Fans en train de danser devant la scène en soirée"/></div>
+                <div class="photo"><img src="images/Compressed/hanny-naibaho-D_LYjtHnDXE-unsplash.webp" loading="lazy" alt="Vue de la scène et du public dans une salle de concert"/></div>
             </div>
             <audio src="media/TunePocket-Background-Loop.mp3" autoplay loop></audio>
-        </div>
+        </section>
 
         <div style="font-size: 0; color: transparent;">
             salle de concert lausanne meilleure musique rock metal dj soirée événements
         </div>
 
-        <div class="footer">
+        <footer class="footer">
             <p>Le Sans Plomb – ancienne station-service reconvertie</p>
             <p>📍 Route du Son 23, 1004 Lausanne | 📞 +41 21 555 12 34</p>
             <p>📧 contact@lesansplomb.ch | 🕸️ @lesansplomb_off</p>
@@ -179,7 +177,7 @@
                 <a href="#">Mentions légales</a> |
                 <a href="#">Plan du site</a> |
                 <a href="#">Cookies</a>
-            </div>
+            </footer>
         </div>
     </div>
 </body>
