petite note à moi même

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="canonical" href="https://autresite.com/page-similaire" />
 
 </head>
-
+<!-- il faut ajouter des sections et pas que des div -->
 <body>
     <div class="container">
         <div class="header">
